--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ publishing {
     }
     repositories {
         maven {
-            name 'fineely-log'
+            name 'fineely-config'
             url "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
             credentials {
                 username = ossrhUsername
