:sparkles: update jpa init add JpaConfig

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-Kepler Lei_0x17E138F9_SECRET.gpg
+Fineely Config_0xE26DB5F6_SECRET.gpg
 gradle.properties
 
 ### STS ###
