--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ artifacts {
 }
 
 group 'com.fineely'
-version '1.0.5'
+version '1.0.6'
 def artifactId = "fineely-config"
 archivesBaseName = artifactId
 sourceCompatibility = '11'
@@ -36,7 +36,7 @@ dependencies {
     compileOnly("org.springframework.boot:spring-boot-starter-data-jpa")
     compileOnly('com.baomidou:mybatis-plus-boot-starter:3.5.2')
     compileOnly("org.springframework.boot:spring-boot-starter-web")
-    implementation('com.alibaba:fastjson:2.0.14.graal')
+    implementation('com.alibaba:fastjson:2.0.32')
     implementation('org.reflections:reflections:0.10.2')
 }
 
